# omniproject

./: CMakeLists.txt  main.cpp  multimagnet.cpp  multimagnet.hpp  omnimagnet.cpp  omnimagnet.hpp  type.hpp  types.cpp  types.hpp
